updated portfolio responsivity

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,7 @@
       name="description"
       content="YCode Portfolio Website"
     />
-    <title>React App</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>ycode.co</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500&family=Titillium+Web:wght@300;400;700&display=swap" rel="stylesheet">
